Updated form registration design

--- a/index.html
+++ b/index.html
@@ -131,58 +131,100 @@
     </div>
 </body>
 </html>
-<style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Registration</title>
     <style>
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background: linear-gradient(45deg, #ff9a9e, #fad0c4);
-    }
-    .form-container {
-        width: 90%;
-        max-width: 400px;
-        padding: 20px;
-        border: 2px solid black;
-        border-radius: 5px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-        text-align: center;
-        font-size: 2em;
-    }
-    form div {
-        margin-bottom: 15px;
-    }
-    label {
-        display: block;
-        margin-bottom: 5px;
-        font-size: 1.2em;
-    }
-    input[type="text"], input[type="file"] {
-        width: 100%;
-        padding: 10px;
-        font-size: 1em;
-        box-sizing: border-box;
-    }
-    button {
-        display: block;
-        width: 100%;
-        padding: 10px;
-        font-size: 1.2em;
-        background-color: #333;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-    button:hover {
-        background-color: #555;
-    }
-</style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(to right, #6a11cb, #2575fc); /* Add gradient background */
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        .form-container {
+            width: 90%;
+            max-width: 400px;
+            padding: 20px;
+            border: 2px solid #333;
+            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow */
+        }
+        h1 {
+            text-align: center;
+            font-size: 2em;
+        }
+        form div {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 1.2em;
+        }
+        input[type="text"], input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 1em;
+            box-sizing: border-box;
+        }
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            font-size: 1.2em;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #555;
+        }
+    </style>
+</head>
+<body>
+    <div class="form-container">
+        <h1>Registration</h1>
+        <form action="/submit" method="post" enctype="multipart/form-data">
+            <div>
+                <label for="fullName">Full Name:</label>
+                <input type="text" id="fullName" name="fullName">
+            </div>
+            <div>
+                <label for="country">Country:</label>
+                <input type="text" id="country" name="country">
+            </div>
+            <div>
+                <label for="className">Class Name:</label>
+                <input type="text" id="className" name="className">
+            </div>
+            <div>
+                <label>Gender:</label>
+                <input type="radio" id="male" name="gender" value="male"> Male
+                <input type="radio" id="female" name="gender" value="female"> Female
+            </div>
+            <div>
+                <label for="avatar">Your Avatar:</label>
+                <input type="file" id="avatar" name="avatar">
+            </div>
+            <div>
+                <button type="submit">Register</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
 
+<style>
+   
+    
     
